--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "grommet": "^1.7.0",
+    "material-ui": "^0.19.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -18,7 +18,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "flow-bin": "^0.53.1",
+    "flow-bin": "^0.53.1"
   },
   "scripts": {
     "start": "react-scripts start",
