--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/typography": "^0.3.0",
     "material-ui": "^0.19.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
