--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.11",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "flow-bin": "^0.53.1"
