--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material/typography": "^0.3.0",
+    "history": "^4.7.2",
     "material-ui": "^0.19.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
